[package]
name = "cargo-dep-bug"
version = "0.1.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
backend = { path = "./web-backend", package = "web-backend"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backend = { path = "./native-backend", package = "native-backend"}

[workspace]
members = [
    "web-backend",
    "native-backend"
]